--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/home/home",
+    "pages/recommend/recommend",
     "pages/index/index",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
@@ -13,7 +14,10 @@
     "pages/openapi/callback/callback",
     "pages/openapi/cloudid/cloudid",
     "pages/im/im",
-    "pages/im/room/room"
+    "pages/im/room/room",
+    "pages/gooutDetail/gooutDetail",
+    "pages/modeDetail/modeDetail",
+    "pages/currentDetail/currentDetail"
   ],
   "permission": {
     "scope.userLocation": {
@@ -24,7 +28,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "Traffic Analysis",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
